--- a/resources/sass/cart.scss
+++ b/resources/sass/cart.scss
@@ -1,7 +1,6 @@
 #cart {
-    position: absolute;
-    top: 65px;
-    right: 15px;
+    position: fixed;
+    top: 70px;
     width: 25rem;
     min-height: 120px;
     z-index: 1000;
